move on typescript from js

--- a/html/FilmLinksParserPage.html
+++ b/html/FilmLinksParserPage.html
@@ -38,12 +38,11 @@
                         </div>
                         <div class="range_slider_container">
                             <div class="slider_track"></div>
-                            <input type="range" min="0" max="10" value="9.5" step="0.1" class="slider_component_min" oninput="slideOne()">
-                            <input type="range" min="0" max="10" value="9.8" step="0.1" class="slider_component_max" oninput="slideTwo()">
+                            <input type="range" min="0" max="10" value="9.5" step="0.1" class="slider_component_min">
+                            <input type="range" min="0" max="10" value="9.8" step="0.1" class="slider_component_max">
                         </div>
                     </div>
-
-                    <script src="../js/double_side_slider.js"></script>
+                    <script type="module" src="../src/js/DoubleSideSliderFormer.js"></script>
                 </div>
 
                 <input class=".links_parsing_form_submit_button"
