--- a/html/FilmLinksParserPage.html
+++ b/html/FilmLinksParserPage.html
@@ -23,6 +23,7 @@
 
         <div id="page_content">
             <form class="links_parsing_form">
+
                 <div class="filtring_indicator_div">
                     <p>Рейтинг фильма</p>
 
@@ -42,10 +43,89 @@
                             <input type="range" min="0" max="10" value="9.8" step="0.1" class="slider_component_max">
                         </div>
                     </div>
-                    <script type="module" src="../src/js/DoubleSideSliderFormer.js"></script>
                 </div>
 
-                <input class=".links_parsing_form_submit_button"
+                <div class="filtring_indicator_div">
+                    <p>Рейтинг на IMDB</p>
+
+                    <div class="range_div">
+                        <div class="values">
+                            <span class="range_value">
+                                9.5
+                            </span>
+                            <span> &dash; </span>
+                            <span class="range_value">
+                                9.8
+                            </span>
+                        </div>
+                        <div class="range_slider_container">
+                            <div class="slider_track"></div>
+                            <input type="range" min="0" max="10" value="9.5" step="0.1" class="slider_component_min">
+                            <input type="range" min="0" max="10" value="9.8" step="0.1" class="slider_component_max">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="filtring_indicator_div">
+                    <p>Рейтинг кинокритиков</p>
+
+                    <div class="range_div">
+                        <div class="values">
+                            <span class="range_value">
+                                9.5
+                            </span>
+                            <span> &dash; </span>
+                            <span class="range_value">
+                                9.8
+                            </span>
+                        </div>
+                        <div class="range_slider_container">
+                            <div class="slider_track"></div>
+                            <input type="range" min="0" max="10" value="9.5" step="0.1" class="slider_component_min">
+                            <input type="range" min="0" max="10" value="9.8" step="0.1" class="slider_component_max">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="filtring_indicator_div">
+                    <p>Рейтинг положительных рецензий</p>
+
+                    <div class="range_div">
+                        <div class="values">
+                            <span class="range_value">
+                                9.5
+                            </span>
+                            <span> &dash; </span>
+                            <span class="range_value">
+                                9.8
+                            </span>
+                        </div>
+                        <div class="range_slider_container">
+                            <div class="slider_track"></div>
+                            <input type="range" min="0" max="10" value="9.5" step="0.1" class="slider_component_min">
+                            <input type="range" min="0" max="10" value="9.8" step="0.1" class="slider_component_max">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="filtring_indicator_div">
+                    <p>Минимальное количество оценок</p>
+
+                    <div class="range_div">
+                        <div class="values">
+                            <span class="range_value">
+                                9.5
+                            </span>
+                        </div>
+                        <div class="range_slider_container">
+                            <div class="slider_track"></div>
+                            <input type="range" min="100" max="2500" value="100" step="5">
+                        </div>
+                    </div>
+                </div>
+
+                <script type="module" src="../src/js/DoubleSideSliderFormer.js"></script>
+                <input class="links_parsing_form_submit_button"
                  type="submit">
             </form>
         </div>
