--- a/html/FilmLinksParserPage.html
+++ b/html/FilmLinksParserPage.html
@@ -24,7 +24,7 @@
         <div id="page_content">
             <form class="links_parsing_form">
 
-                <div class="filtring_indicator_div">
+                <div class="filtring_indicator_div indicator_double_slider">
                     <p>Рейтинг фильма</p>
 
                     <div class="range_div">
@@ -45,7 +45,7 @@
                     </div>
                 </div>
 
-                <div class="filtring_indicator_div">
+                <div class="filtring_indicator_div indicator_double_slider">
                     <p>Рейтинг на IMDB</p>
 
                     <div class="range_div">
@@ -66,7 +66,7 @@
                     </div>
                 </div>
 
-                <div class="filtring_indicator_div">
+                <div class="filtring_indicator_div indicator_double_slider">
                     <p>Рейтинг кинокритиков</p>
 
                     <div class="range_div">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
 
-                <div class="filtring_indicator_div">
+                <div class="filtring_indicator_div indicator_double_slider">
                     <p>Рейтинг положительных рецензий</p>
 
                     <div class="range_div">
@@ -108,23 +108,24 @@
                     </div>
                 </div>
 
-                <div class="filtring_indicator_div">
+                <div class="filtring_indicator_div indicator_slider">
                     <p>Минимальное количество оценок</p>
 
                     <div class="range_div">
                         <div class="values">
                             <span class="range_value">
-                                9.5
+                                100
                             </span>
                         </div>
                         <div class="range_slider_container">
                             <div class="slider_track"></div>
-                            <input type="range" min="100" max="2500" value="100" step="5">
+                            <input type="range" min="100" max="2500" value="100" step="5" class="slider_range">
                         </div>
                     </div>
                 </div>
 
                 <script type="module" src="../src/js/DoubleSideSliderFormer.js"></script>
+                <script type="module" src="../src/js/SliderFormer.js"></script>
                 <input class="links_parsing_form_submit_button"
                  type="submit">
             </form>
